# mdtask

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.devcontainer/: devcontainer.json
docs/: test-tasks.md
src/: main.rs
