[package]
name = "mdtask"
version = "0.1.0"
edition = "2021"
authors = ["Patrick Walsh <patrick.walsh@ironcorelabs.com>"]
license = "MIT OR Apache-2.0"
description = "A tool to view and manipulate markdown tasks"
readme = "README.md"
homepage = "https://github.com/zmre/mdtask"
repository = "https://github.com/zmre/mdtask"
keywords = ["cli", "task", "markdown"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10.0"
confy = "0.5.1"
serde = "^1.0"
serde_derive = "^1.0"
grep = "0.2"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
assert_fs = "1.0.10"
